pulldown-cmark-mdcat/tests/snapshots/render/iterm2@commonmark-spec-014-backslash_escapes.snap
---
source: pulldown-cmark-mdcat/tests/render.rs
assertion_line: 124
expression: "render_to_string(markdown_file, &iterm2_settings)"
input_file: pulldown-cmark-mdcat/tests/markdown/commonmark-spec/014-backslash_escapes.md
---
*not emphasized* <br/> not a tag [not a link](/foo) `not code` 1. not a list *
not a list # not a heading [foo]: /url "not a reference" &ouml; not a character
entity
